Updated with Glitch

--- a/views/iframe.html
+++ b/views/iframe.html
@@ -10,12 +10,5 @@
     </script>
   </head>
 
-  <body>
-    <form id="form" method="post" enctype="multipart/form-data">
-      <input id="input" type="file" name="pgm" required />
-      <button id="submit" type="button">確認</button>
-    </form>
-  </body>
-
-  <script src="pgm.js" type="module"></script>
+  <script src="iframe.js"></script>
 </html>
