Updated with Glitch

--- a/views/view.html
+++ b/views/view.html
@@ -28,9 +28,15 @@
 
       <section id="container">
         <article>
-          <p>
-            <strong><big>pgmInfo.name</big></strong>
-          </p>
+          <div style="display: flex">
+            <p>
+              <strong><big>pgmInfo.name</big></strong>
+            </p>
+            <div style="margin-left: auto">
+              <button>プレビュー</button>
+              <button>プレビュー</button>
+            </div>
+          </div>
           <footer>
             <small><small>pgmInfo.description</small></small>
           </footer>
