Updated with Glitch

--- a/views/iframe.html
+++ b/views/iframe.html
@@ -15,5 +15,7 @@
     </script>
   </head>
 
-  <script src="iframe.js"></script>
+  <body>
+    <script src="iframe.js"></script>
+  </body>
 </html>
